First commited as before_24783_rev1