@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2006, 2015 Tom Schindl and others.
+ * Copyright (c) 2006, 2010 Tom Schindl and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -7,8 +7,6 @@
  *
  * Contributors:
  *     Tom Schindl - initial API and implementation
- *     Jeanderson Candido <http://jeandersonbc.github.io> - Bug 414565
- *     Lars Vogel <Lars.Vogel@vogella.com> - Bug 475361
  *******************************************************************************/
 
 package org.eclipse.jface.snippets.viewers;
@@ -16,7 +14,6 @@ package org.eclipse.jface.snippets.viewers;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.util.ArrayList;
-import java.util.List;
 
 import org.eclipse.jface.viewers.CellEditor;
 import org.eclipse.jface.viewers.CheckboxCellEditor;
@@ -172,7 +169,7 @@ public class Snippet048TreeViewerTabWithCheckboxFor3_3 {
 
 			@Override
 			protected Object getValue(Object element) {
-				return Boolean.valueOf(((MyModel) element).bool);
+				return new Boolean(((MyModel) element).bool);
 			}
 
 			@Override
@@ -289,10 +286,12 @@ public class Snippet048TreeViewerTabWithCheckboxFor3_3 {
 	}
 
 	public class MyModel {
-
 		public MyModel parent;
-		public List<MyModel> child = new ArrayList<>();
+
+		public ArrayList child = new ArrayList();
+
 		public int counter;
+
 		public boolean bool;
 
 		public MyModel(int counter, MyModel parent) {
@@ -306,6 +305,7 @@ public class Snippet048TreeViewerTabWithCheckboxFor3_3 {
 			if (parent != null) {
 				rv = parent.toString() + ".";
 			}
+
 			rv += counter;
 
 			return rv;
